--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -7,27 +7,60 @@
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context="com.example.shipon.toletbd.activity.Main2Activity">
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolBar"
         android:background="@color/colorPrimaryDark"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize">
-
-    </android.support.v7.widget.Toolbar>
+        android:layout_height="?android:actionBarSize">
 <LinearLayout
-    android:orientation="vertical"
-    android:id="@+id/mainLayout"
-    android:layout_below="@+id/toolBar"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
+    <TextView
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent" />
+    <TextView
+        android:textStyle="bold"
+        android:id="@+id/TitleText"
+        android:gravity="center"
+        android:textSize="22sp"
+        android:textColor="#FFFFFF"
+        android:text="Post as owner"
+        android:layout_weight="4"
+        android:layout_width="0dp"
+        android:layout_height="match_parent" />
+    <TextView
 
+        android:id="@+id/PostText"
+        android:gravity="center"
+        android:textSize="22sp"
+        android:textColor="#FFFFFF"
+        android:text="Post"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent" />
 </LinearLayout>
+    </android.support.v7.widget.Toolbar>
+
+
+        <LinearLayout
+            android:layout_marginBottom="?android:actionBarSize"
+            android:orientation="vertical"
+            android:id="@+id/mainLayout"
+            android:layout_below="@+id/toolBar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </LinearLayout>
+
 
     <android.support.design.widget.BottomNavigationView
 
         android:id="@+id/navigation"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="?android:actionBarSize"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:background="?android:attr/windowBackground"
