--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -1,13 +1,350 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
+    android:orientation="vertical"
     tools:context="com.example.shipon.toletbd.fragment.PostFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
+        android:layout_margin="20dp"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="post" />
+        android:layout_height="wrap_content">
 
-</FrameLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textSize="15dp"
+                android:layout_weight=".8"
+                android:textColor="#FFFFFF"
+                android:text="Name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:textStyle="bold"
+                android:gravity="center"
+                android:textSize="15sp"
+                android:layout_weight=".5"
+                android:textColor="#FFFFFF"
+                android:text=":"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:textSize="15dp"
+                android:layout_weight="1.5"
+                android:textColor="#FFFFFF"
+                android:text="Shipon Sarder"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textSize="15dp"
+                android:layout_weight=".8"
+                android:textColor="#FFFFFF"
+                android:text="Email"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:gravity="center"
+                android:textSize="15sp"
+                android:layout_weight=".5"
+                android:textColor="#FFFFFF"
+                android:text=":"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:textSize="15dp"
+                android:layout_weight="1.5"
+                android:textColor="#FFFFFF"
+                android:text="shipon0142@gmail.com"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textSize="15dp"
+                android:layout_weight=".8"
+                android:textColor="#FFFFFF"
+                android:text="Contact"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:gravity="center"
+                android:textSize="15sp"
+                android:layout_weight=".5"
+                android:textColor="#FFFFFF"
+                android:text=":"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:textSize="15dp"
+                android:layout_weight="1.5"
+                android:textColor="#FFFFFF"
+                android:text="+8801942040142"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="5dp"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+            <LinearLayout
+                android:padding="10dp"
+                android:orientation="vertical"
+                android:textSize="15dp"
+                android:textColor="#FFFFFF"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+                <TextView
+
+                    android:textColor="#FFFFFF"
+                    android:gravity="center"
+                    android:text="District/City (Optional)"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+                <EditText
+                    android:id="@+id/DistrictET"
+                    android:paddingTop="3dp"
+                    android:paddingBottom="3dp"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="30dp"
+                    android:background="@drawable/rectangle_edittext"
+                    android:gravity="center"
+                    android:foregroundGravity="left"
+                    android:textSize="14sp"
+                    android:textColorHint="#FFFFFF"
+                    android:textColor="#FFFFFF"
+                    android:hint=""
+                    android:layout_marginTop="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_marginTop="5dp"
+                    android:textColor="#FFFFFF"
+                    android:gravity="center"
+                    android:text="Area (Optional)"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+                <EditText
+                    android:id="@+id/AreaET"
+                    android:paddingTop="3dp"
+                    android:paddingBottom="3dp"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="30dp"
+                    android:background="@drawable/rectangle_edittext"
+                    android:gravity="center"
+                    android:foregroundGravity="left"
+                    android:textSize="14sp"
+                    android:textColorHint="#FFFFFF"
+                    android:textColor="#FFFFFF"
+                    android:hint=""
+                    android:layout_marginTop="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:layout_marginTop="5dp"
+                    android:textColor="#FFFFFF"
+                    android:gravity="center"
+                    android:text="Category (Optional)"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+                <Spinner
+                    android:id="@+id/CatagorySpinnerPost"
+                    android:paddingTop="3dp"
+                    android:paddingBottom="3dp"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="30dp"
+                    android:background="@drawable/rectangle_edittext"
+                    android:gravity="center"
+                    android:textSize="14sp"
+                    android:layout_marginTop="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:layout_marginTop="5dp"
+                    android:textColor="#FFFFFF"
+                    android:gravity="center"
+                    android:text="Month"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+                <Spinner
+                    android:id="@+id/MonthSpinnerPost"
+                    android:paddingTop="3dp"
+                    android:paddingBottom="3dp"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="30dp"
+                    android:background="@drawable/rectangle_edittext"
+                    android:gravity="center"
+                    android:textSize="14sp"
+                    android:layout_marginTop="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:layout_marginTop="5dp"
+                    android:textColor="#FFFFFF"
+                    android:gravity="center"
+                    android:text="Cost (Taka)"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+                <EditText
+                    android:inputType="number"
+                    android:id="@+id/CostET"
+                    android:paddingTop="3dp"
+                    android:paddingBottom="3dp"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="30dp"
+                    android:background="@drawable/rectangle_edittext"
+                    android:gravity="center"
+                    android:foregroundGravity="left"
+                    android:textSize="14sp"
+                    android:textColorHint="#FFFFFF"
+                    android:textColor="#FFFFFF"
+                    android:hint=""
+                    android:layout_marginTop="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <FrameLayout
+                    android:layout_weight="1"
+                    android:padding="10dp"
+                    android:layout_width="0dp"
+                    android:layout_height="100dp">
+                    <TextView
+                        android:textColor="#FFFFFF"
+                        android:gravity="center"
+                        android:textSize="16sp"
+                        android:background="@drawable/rectangle_edittext"
+                        android:text="Add photo"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                </FrameLayout>
+                <FrameLayout
+                    android:layout_weight="1"
+                    android:padding="10dp"
+                    android:layout_width="0dp"
+                    android:layout_height="100dp">
+                    <TextView
+                        android:textColor="#FFFFFF"
+                        android:gravity="center"
+                        android:textSize="16sp"
+                        android:background="@drawable/rectangle_edittext"
+                        android:text="Add photo"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                </FrameLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <FrameLayout
+                    android:layout_weight="1"
+                    android:padding="10dp"
+                    android:layout_width="0dp"
+                    android:layout_height="100dp">
+                    <TextView
+                        android:textColor="#FFFFFF"
+                        android:gravity="center"
+                        android:textSize="16sp"
+                        android:background="@drawable/rectangle_edittext"
+                        android:text="Add photo"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                </FrameLayout>
+                <FrameLayout
+                    android:layout_weight="1"
+                    android:padding="10dp"
+                    android:layout_width="0dp"
+                    android:layout_height="100dp">
+                    <TextView
+                        android:textColor="#FFFFFF"
+                        android:gravity="center"
+                        android:textSize="16sp"
+                        android:background="@drawable/rectangle_edittext"
+                        android:text="Add photo"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                </FrameLayout>
+            </LinearLayout>
+            <TextView
+                android:layout_marginTop="5dp"
+                android:textColor="#FFFFFF"
+                android:gravity="center"
+                android:text="Details (Optional)"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <EditText
+                android:id="@+id/DetailsET"
+                android:paddingTop="3dp"
+                android:paddingBottom="3dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:background="@drawable/rectangle_edittext"
+                android:gravity="center"
+                android:foregroundGravity="left"
+                android:textSize="14sp"
+                android:textColorHint="#FFFFFF"
+                android:textColor="#FFFFFF"
+                android:hint=""
+                android:layout_marginTop="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="80dp" />
+        </LinearLayout>
+    </LinearLayout>
+
+
+
+
+
+
+
+
+
+
+
+</LinearLayout>
+    </ScrollView>
