--- a/app/src/main/res/drawable/rectangle_edittext.xml
+++ b/app/src/main/res/drawable/rectangle_edittext.xml
@@ -2,7 +2,7 @@
 <!--  res/drawable/rounded_edittext.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="10dp">
-    <solid android:color="#154C6D"/>
-    <stroke android:width=".8dp" android:color="#FFFFFF" />
+    <solid android:color="#BCC3C5"/>
+    <stroke android:width="1dp" android:color="#154C6D" />
 
 </shape>
