--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp">
         <TextView
+            android:onClick="createAccount"
             android:layout_marginBottom="40dp"
             android:textSize="14sp"
             android:textColor="#FFFFFF"
@@ -59,6 +60,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 <TextView
+    android:onClick="clickSignin"
     android:paddingTop="7dp"
     android:paddingBottom="7dp"
     android:textColor="#154C6D"
