--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -16,16 +16,19 @@
 <LinearLayout
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <TextView
+    android:layout_height="match_parent">
+    <ImageView
+        android:layout_margin="5dp"
+        android:onClick="clickAccount"
+        android:src="@drawable/ic_account_circle_black_24dp"
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="match_parent" />
     <TextView
-        android:textStyle="bold"
+
         android:id="@+id/TitleText"
         android:gravity="center"
-        android:textSize="22sp"
+        android:textSize="20sp"
         android:textColor="#FFFFFF"
         android:text="Post as owner"
         android:layout_weight="4"
@@ -35,17 +38,19 @@
 
         android:id="@+id/PostText"
         android:gravity="center"
-        android:textSize="22sp"
+        android:textSize="18sp"
         android:textColor="#FFFFFF"
         android:text="Post"
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="match_parent" />
+
 </LinearLayout>
     </android.support.v7.widget.Toolbar>
 
 
         <LinearLayout
+            android:background="#154C6D"
             android:layout_marginBottom="?android:actionBarSize"
             android:orientation="vertical"
             android:id="@+id/mainLayout"
