--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -5,224 +5,151 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="#154C6D"
     android:orientation="vertical"
     tools:context="com.example.shipon.toletbd.fragment.PostFragment">
-
+    <android.support.v7.widget.CardView
+        android:layout_margin="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <LinearLayout
-        android:layout_margin="20dp"
+
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:textSize="15dp"
-                android:layout_weight=".8"
-                android:textColor="#FFFFFF"
-                android:text="Name"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:textStyle="bold"
-                android:gravity="center"
-                android:textSize="15sp"
-                android:layout_weight=".5"
-                android:textColor="#FFFFFF"
-                android:text=":"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:textSize="15dp"
-                android:layout_weight="1.5"
-                android:textColor="#FFFFFF"
-                android:text="Shipon Sarder"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_marginTop="5dp"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:textSize="15dp"
-                android:layout_weight=".8"
-                android:textColor="#FFFFFF"
-                android:text="Email"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:gravity="center"
-                android:textSize="15sp"
-                android:layout_weight=".5"
-                android:textColor="#FFFFFF"
-                android:text=":"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:textSize="15dp"
-                android:layout_weight="1.5"
-                android:textColor="#FFFFFF"
-                android:text="shipon0142@gmail.com"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_marginTop="5dp"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:textSize="15dp"
-                android:layout_weight=".8"
-                android:textColor="#FFFFFF"
-                android:text="Contact"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:gravity="center"
-                android:textSize="15sp"
-                android:layout_weight=".5"
-                android:textColor="#FFFFFF"
-                android:text=":"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:textSize="15dp"
-                android:layout_weight="1.5"
-                android:textColor="#FFFFFF"
-                android:text="+8801942040142"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-        <LinearLayout
             android:layout_marginTop="5dp"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
-
             <LinearLayout
                 android:padding="10dp"
                 android:orientation="vertical"
-                android:textSize="15dp"
-                android:textColor="#FFFFFF"
+
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" >
                 <TextView
-
-                    android:textColor="#FFFFFF"
-                    android:gravity="center"
-                    android:text="District/City (Optional)"
+                    android:textSize="16sp"
+                    android:textColor="#154C6D"
+                    android:text="District/City*"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
                 <EditText
                     android:id="@+id/DistrictET"
-                    android:paddingTop="3dp"
-                    android:paddingBottom="3dp"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"
+                    android:padding="5dp"
+
                     android:background="@drawable/rectangle_edittext"
-                    android:gravity="center"
+
                     android:foregroundGravity="left"
-                    android:textSize="14sp"
+                    android:textSize="16sp"
                     android:textColorHint="#FFFFFF"
                     android:textColor="#FFFFFF"
                     android:hint=""
                     android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="40dp" />
 
                 <TextView
+                    android:textSize="16sp"
                     android:layout_marginTop="5dp"
-                    android:textColor="#FFFFFF"
-                    android:gravity="center"
-                    android:text="Area (Optional)"
+                    android:textColor="#154C6D"
+                    android:text="Area*"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
                 <EditText
                     android:id="@+id/AreaET"
-                    android:paddingTop="3dp"
-                    android:paddingBottom="3dp"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"
+                    android:padding="5dp"
+
                     android:background="@drawable/rectangle_edittext"
-                    android:gravity="center"
+
                     android:foregroundGravity="left"
-                    android:textSize="14sp"
+                    android:textSize="16sp"
                     android:textColorHint="#FFFFFF"
                     android:textColor="#FFFFFF"
                     android:hint=""
                     android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="40dp" />
                 <TextView
+                    android:textSize="16sp"
                     android:layout_marginTop="5dp"
+                    android:textColor="#154C6D"
+
+                    android:text="House/Holding No.*"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+                <EditText
+                    android:id="@+id/HouseET"
+                    android:padding="5dp"
+
+                    android:background="@drawable/rectangle_edittext"
+
+                    android:foregroundGravity="left"
+                    android:textSize="16sp"
+                    android:textColorHint="#FFFFFF"
                     android:textColor="#FFFFFF"
-                    android:gravity="center"
-                    android:text="Category (Optional)"
+                    android:hint=""
+                    android:layout_marginTop="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp" />
+                <TextView
+                    android:textSize="16sp"
+                    android:layout_marginTop="5dp"
+                    android:textColor="#154C6D"
+                    android:text="Category*"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
                 <Spinner
                     android:id="@+id/CatagorySpinnerPost"
-                    android:paddingTop="3dp"
-                    android:paddingBottom="3dp"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"
+                  android:padding="5dp"
+
                     android:background="@drawable/rectangle_edittext"
-                    android:gravity="center"
-                    android:textSize="14sp"
+
+                    android:textSize="16sp"
                     android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="40dp"/>
                 <TextView
+                    android:textSize="16sp"
                     android:layout_marginTop="5dp"
-                    android:textColor="#FFFFFF"
-                    android:gravity="center"
-                    android:text="Month"
+                    android:textColor="#154C6D"
+                    android:text="Month*"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
                 <Spinner
                     android:id="@+id/MonthSpinnerPost"
-                    android:paddingTop="3dp"
-                    android:paddingBottom="3dp"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"
+                 android:padding="5dp"
+
                     android:background="@drawable/rectangle_edittext"
-                    android:gravity="center"
+
                     android:textSize="14sp"
                     android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="40dp"/>
                 <TextView
+                    android:textSize="16sp"
                     android:layout_marginTop="5dp"
-                    android:textColor="#FFFFFF"
-                    android:gravity="center"
-                    android:text="Cost (Taka)"
+                    android:textColor="#154C6D"
+                    android:text="Cost (Taka)*"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
                 <EditText
                     android:inputType="number"
                     android:id="@+id/CostET"
-                    android:paddingTop="3dp"
-                    android:paddingBottom="3dp"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"
+                    android:padding="5dp"
+
                     android:background="@drawable/rectangle_edittext"
-                    android:gravity="center"
+
                     android:foregroundGravity="left"
-                    android:textSize="14sp"
+                    android:textSize="16sp"
                     android:textColorHint="#FFFFFF"
                     android:textColor="#FFFFFF"
                     android:hint=""
                     android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="40dp" />
 
             </LinearLayout>
 
@@ -242,7 +169,7 @@
                     android:layout_width="0dp"
                     android:layout_height="100dp">
                     <TextView
-                        android:textColor="#FFFFFF"
+                        android:textColor="#154C6D"
                         android:gravity="center"
                         android:textSize="16sp"
                         android:background="@drawable/rectangle_edittext"
@@ -259,7 +186,7 @@
                     android:layout_width="0dp"
                     android:layout_height="100dp">
                     <TextView
-                        android:textColor="#FFFFFF"
+                        android:textColor="#154C6D"
                         android:gravity="center"
                         android:textSize="16sp"
                         android:background="@drawable/rectangle_edittext"
@@ -281,7 +208,7 @@
                     android:layout_width="0dp"
                     android:layout_height="100dp">
                     <TextView
-                        android:textColor="#FFFFFF"
+                        android:textColor="#154C6D"
                         android:gravity="center"
                         android:textSize="16sp"
                         android:background="@drawable/rectangle_edittext"
@@ -298,7 +225,7 @@
                     android:layout_width="0dp"
                     android:layout_height="100dp">
                     <TextView
-                        android:textColor="#FFFFFF"
+                        android:textColor="#154C6D"
                         android:gravity="center"
                         android:textSize="16sp"
                         android:background="@drawable/rectangle_edittext"
@@ -311,40 +238,29 @@
                 </FrameLayout>
             </LinearLayout>
             <TextView
+                android:textSize="16sp"
                 android:layout_marginTop="5dp"
-                android:textColor="#FFFFFF"
-                android:gravity="center"
-                android:text="Details (Optional)"
+                android:textColor="#154C6D"
+
+                android:text="Details*"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <EditText
                 android:id="@+id/DetailsET"
-                android:paddingTop="3dp"
-                android:paddingBottom="3dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
+                android:padding="5dp"
                 android:background="@drawable/rectangle_edittext"
-                android:gravity="center"
+
                 android:foregroundGravity="left"
-                android:textSize="14sp"
+                android:textSize="16sp"
                 android:textColorHint="#FFFFFF"
                 android:textColor="#FFFFFF"
                 android:hint=""
-                android:layout_marginTop="5dp"
+                android:layout_margin="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="80dp" />
         </LinearLayout>
+
     </LinearLayout>
-
-
-
-
-
-
-
-
-
-
-
+</android.support.v7.widget.CardView>
 </LinearLayout>
     </ScrollView>
