--- a/app/src/main/res/layout/fragment_search_home.xml
+++ b/app/src/main/res/layout/fragment_search_home.xml
@@ -72,6 +72,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <TextView
+        android:id="@+id/SearchTV"
         android:textSize="16sp"
         android:textColor="#FFFFFF"
         android:layout_marginTop="15dp"
