--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -37,7 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <android.support.v7.widget.CardView
-            android:layout_margin="10dp"
+            android:layout_margin="3dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <LinearLayout
@@ -45,40 +45,49 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
             <ImageView
+                android:id="@+id/MainImageIV"
                 android:scaleType="fitXY"
-                android:src="@drawable/room"
                 android:layout_width="match_parent"
                 android:layout_height="150dp" />
+                <ProgressBar
+                    android:id="@+id/DProgressBar"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                </FrameLayout>
             <LinearLayout
 
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <ImageView
+                    android:id="@+id/SmallImg1"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"
                     android:layout_marginRight="5dp"
                   android:scaleType="fitXY"
-                    android:src="@drawable/room"
                     android:layout_width="50dp"
                     android:layout_height="50dp" />
                 <ImageView
+                    android:id="@+id/SmallImg2"
                     android:layout_margin="5dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/room"
                     android:layout_width="50dp"
                     android:layout_height="50dp" />
                 <ImageView
+                    android:id="@+id/SmallImg3"
                     android:layout_margin="5dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/room"
                     android:layout_width="50dp"
                     android:layout_height="50dp" />
                 <ImageView
+                    android:id="@+id/SmallImg4"
                     android:layout_margin="5dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/room"
                     android:layout_width="50dp"
                     android:layout_height="50dp" />
             </LinearLayout>
@@ -87,9 +96,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                 <TextView
+                    android:id="@+id/DAddressTV"
                     android:gravity="center|left"
                     android:layout_marginTop="3dp"
-                    android:textColor="#000000"
+                    android:textColor="@color/color2"
+                    android:drawableTint="@color/color2"
                     android:textSize="16sp"
                     android:drawableLeft="@drawable/ic_location_on_black_24dp"
                     android:text="21/8,Mohammadpur,Dhaka"
@@ -101,18 +112,22 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <TextView
+                            android:id="@+id/DMonthTV"
                             android:gravity="center|left"
-                            android:textColor="#000000"
                             android:layout_weight="1"
                             android:drawableLeft="@drawable/ic_date_range_black_24dp"
                             android:textSize="16sp"
+                            android:textColor="@color/color2"
+                            android:drawableTint="@color/color2"
                             android:text="October"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content" />
                         <TextView
+                            android:id="@+id/DCatagoryTV"
                             android:gravity="center|left"
 
-                            android:textColor="#000000"
+                            android:textColor="@color/color2"
+                            android:drawableTint="@color/color2"
                             android:layout_marginLeft="10dp"
                             android:drawableLeft="@drawable/ic_home_black_24dp"
                             android:textSize="16sp"
@@ -121,8 +136,10 @@
                             android:layout_height="wrap_content" />
                     </LinearLayout>
                     <TextView
+                        android:id="@+id/DCostTV"
                         android:gravity="center|left"
-                        android:textColor="#000000"
+                        android:textColor="@color/color2"
+                        android:drawableTint="@color/color2"
 
                         android:drawableLeft="@drawable/ic_attach_money_black_24dp"
                         android:textSize="16sp"
@@ -135,15 +152,19 @@
                         android:layout_width="match_parent"
                         android:layout_height="2dp" />
                     <TextView
+                        android:id="@+id/DOwnerNameTV"
                         android:gravity="center|left"
-                        android:textColor="#000000"
+                        android:textColor="@color/color2"
+                        android:drawableTint="@color/color2"
                         android:textSize="16sp"
                         android:text="Owner Name : Shipon Sarder"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
                     <TextView
+                        android:id="@+id/DContactTV"
                         android:gravity="center|left"
-                        android:textColor="#000000"
+                        android:textColor="@color/color2"
+                        android:drawableTint="@color/color2"
                         android:textSize="16sp"
                         android:text="Contact : 01942040142"
                         android:layout_width="match_parent"
@@ -154,16 +175,19 @@
                         android:layout_height="2dp" />
                     <TextView
                         android:gravity="center"
-                        android:textColor="#000000"
+                        android:textColor="@color/color2"
+                        android:drawableTint="@color/color2"
                         android:textSize="17sp"
                         android:text="Description"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
                     <TextView
-                        android:backgroundTint="#808080"
+                        android:id="@+id/DDescriptionTV"
+                        android:backgroundTint="#b6b59d"
                         android:background="@drawable/rectangle_edittext"
                         android:padding="5dp"
-                        android:textColor="#FFFFFF"
+                        android:textColor="@color/color2"
+                        android:drawableTint="@color/color2"
                         android:textSize="16sp"
                         android:text="3 room+ 2 bathroom + Kitchen"
                         android:layout_width="match_parent"
@@ -184,6 +208,7 @@
                         android:padding="5dp"
                         android:textColor="#FFFFFF"
                         android:background="@drawable/rectangle_edittext"
+                        android:backgroundTint="@color/color2"
                         android:layout_gravity="bottom"
                         android:layout_weight="1"
                         android:text="Call now"
@@ -197,6 +222,7 @@
                             android:textColor="#FFFFFF"
                             android:background="@drawable/rectangle_edittext"
                             android:layout_gravity="bottom"
+                            android:backgroundTint="@color/color2"
                             android:layout_weight="1"
                             android:text="Message"
                             android:layout_width="0dp"
@@ -210,6 +236,7 @@
                             android:layout_gravity="bottom"
                             android:layout_weight="1"
                             android:text="Request"
+                            android:backgroundTint="@color/color2"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content" />
                     </LinearLayout>
