--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/background1"
+    android:background="@color/color2"
+
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.shipon.toletbd.activity.MainActivity">
@@ -20,10 +21,12 @@
             android:src="@drawable/logo"
             android:layout_width="200dp"
             android:layout_height="100dp" />
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center">
         <EditText
             android:onClick="clickSearch"
-
             android:focusable="false"
             android:drawableTint="#FFFFFF"
             android:textColor="#FFFFFF"
@@ -31,8 +34,9 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:text="Search Your Home"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+</LinearLayout>
 
     </LinearLayout>
     <LinearLayout
